Simplify `new InternalError().initCause(e)` to `new InternalError(e)`.